package lapr4.showProposalManagement.domain;

public enum ShowProposalStatus {
    CREATED, PENDENT, REJECTED, ACCEPTED;
}
